--- a/SpaceDashboard/package.json
+++ b/SpaceDashboard/package.json
@@ -1,7 +1,6 @@
 {
 	"name": "spacedashboard",
 	"version": "0.0.1",
-	"private": true,
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
@@ -12,6 +11,8 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
+		"@fontsource/fira-mono": "^4.5.10",
+		"@neoconfetti/svelte": "^1.0.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
@@ -31,6 +32,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"sass": "^1.72.0",
 		"svelte-loading-spinners": "^0.3.4"
 	}
 }
