--- a/SpaceDashboard/package.json
+++ b/SpaceDashboard/package.json
@@ -34,6 +34,7 @@
 	"dependencies": {
 		"moment": "^2.30.1",
 		"sass": "^1.72.0",
-		"svelte-loading-spinners": "^0.3.4"
+		"svelte-loading-spinners": "^0.3.4",
+		"svelte-paginate": "^0.1.0"
 	}
 }
